// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repeat-node-update-compiler on compile multipl paths 1`] = `
"_updaters.push({
  update: st => {
    let prevCount = items.length;
    items = st.bars.push(...st.foos);
    for (let __removeIndex = prevCount - 1; __removeIndex >= items.length; __removeIndex--) {
      parent.removeChild(_nodes[__removeIndex].node);
    }
    if (prevCount > items.length)
      _nodes.length = items.length;
    for (let __index = 0; __index < _nodes.length; __index++) {
      for (let __updatersIndex = 0; __updatersIndex < _nodes[__index].updaters.length; __updatersIndex++) {
        _nodes[__index].updaters[__updatersIndex].update(st);
      }
    }
    _nodes.length = items.length;
    for (let i = prevCount; i < items.length; i++) {
      _createChildren(i);
    }
  }
});"
`;

exports[`repeat-node-update-compiler on compile single path 1`] = `
"_updaters.push({
  update: st => {
    let prevCount = items.length;
    items = st.bars;
    for (let __removeIndex = prevCount - 1; __removeIndex >= items.length; __removeIndex--) {
      parent.removeChild(_nodes[__removeIndex].node);
    }
    if (prevCount > items.length)
      _nodes.length = items.length;
    for (let __index = 0; __index < _nodes.length; __index++) {
      for (let __updatersIndex = 0; __updatersIndex < _nodes[__index].updaters.length; __updatersIndex++) {
        _nodes[__index].updaters[__updatersIndex].update(st);
      }
    }
    _nodes.length = items.length;
    for (let i = prevCount; i < items.length; i++) {
      _createChildren(i);
    }
  }
});"
`;
